# ebpf-for-windows

./: .gitignore  .gitmodules  CMakeLists.txt  Directory.Build.props  README.md  ebpf-for-windows.sln
.azure/: OneBranch.PullRequest.yml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: test_failure.md
.github/workflows/: bpf2c-test.yml  build.yml  build_perf_test.yml  check_wdk.yml  cicd.yml  cmake_build.yml  codeball.yml  create-or-update-issue.yml  create-or-update_issue.yml  dependency-review.yml  main.yml  netperf.yml  nuget_update.yaml  ossar-scan.yml  qudo_review.yml  release-scheduler.yml  reusable-build.yml  reusable-test.yml  scorecards-analysis.yml  spellcheck.yml  test.yml  tla-plus-models.yml  update-docs.yml  upload-perf-results.yml  validate-yaml.yml
.onefuzz/: OneFuzzConfig.json
cmake/: options.cmake  settings.cmake
docs/: AnalyzeWorkflowRuntime.md  AutomatedTests.md  DevelopmentGuide.md  GettingStarted.md  InstallEbpf.md  NativeCodeGeneration.md  PinPaths.md  ReleaseProcess.md  eBbpfProofOfVerification.md  eBpfExtensions.md  isa-support.rst  tutorial.md
ebpfapi/: CMakeLists.txt  ebpfapi.vcxproj  ebpfapi.vcxproj.filters  rpc_client.cpp
ebpfcore/: CMakeLists.txt  EbpfCore.vcxproj  ebpf_drv.c
ebpfcore/usersim/: EbpfCore_Usersim.vcxproj
ebpfsvc/: CMakeLists.txt  eBPFSvc.vcxproj  rpc_api.cpp
include/: bpf2c.h  bpf_helper_defs.h  ebpf_api.h  ebpf_execution_type.h  ebpf_extension_uuids.h  ebpf_nethooks.h  ebpf_result.h  ebpf_structs.h
installer/: Product.wxs
libs/api/: CMakeLists.txt  Verifier.cpp  api.vcxproj  api_internal.h  bpf_syscall.cpp  ebpf_api.cpp  libbpf_link.cpp  libbpf_object.cpp  libbpf_program.cpp  rpc_client.h
libs/api_common/: CMakeLists.txt  api_common.cpp  api_common.vcxproj
libs/ebpfnetsh/: CMakeLists.txt  ebpfnetsh.vcxproj  netsh_hash.cpp  netsh_hash.h  programs.cpp
libs/execution_context/: CMakeLists.txt  ebpf_core.c  ebpf_core.h  ebpf_core_jit.c  ebpf_core_jit.h  ebpf_general_helpers.c  ebpf_link.c  ebpf_maps.c  ebpf_native.c  ebpf_program.c  ebpf_program.h  ebpf_protocol.h
libs/execution_context/kernel/: execution_context_kernel.vcxproj
libs/execution_context/unit/: execution_context_unit_test.cpp  execution_context_unit_test_jit.cpp  execution_context_unit_test_jit.h
libs/execution_context/user/: execution_context_user.vcxproj
libs/platform/: CMakeLists.txt
libs/runtime/: ebpf_epoch.c  ebpf_epoch.h  ebpf_hash_table.c  ebpf_hash_table.h  ebpf_namespace.c  ebpf_namespace.h  ebpf_object.c  ebpf_object.h  ebpf_pinning_table.c  (+5 more)
netebpfext/: CMakeLists.txt  net_ebpf_ext_sock_addr.c  net_ebpf_ext_sock_ops.c  net_ebpf_ext_xdp.c  netebpfext.vcxproj
packaging/: CMakeLists.txt  README.md
rpc_interface/: CMakeLists.txt  rpc_interface.idl  rpc_interface.vcxproj
scripts/: Update-WdkVersion.ps1  check_binary_dependencies.ps1  check_msi_installation.ps1  initialize_ebpf_repo.ps1  run_tlaps.sh
tests/: CMakeLists.txt
tests/api_test/: CMakeLists.txt  api_test.cpp  api_test.h  api_test.vcxproj
tests/bpf2c_plugin/: bpf2c_plugin.vcxproj
tests/bpf2c_tests/: CMakeLists.txt  bpf2c_tests.vcxproj  bpf2c_tests.vcxproj.filters  raw_bpf.cpp  requirements.txt
tests/bpf2c_tests/expected/: atomic_instruction_fetch_add_dll.c  atomic_instruction_fetch_add_raw.c  atomic_instruction_fetch_add_sys.c  atomic_instruction_others_dll.c  atomic_instruction_others_raw.c  atomic_instruction_others_sys.c  bad_map_name_dll.c  bad_map_name_raw.c  bad_map_name_sys.c  bind_policy_dll.c  bind_policy_raw.c  bind_policy_sys.c  bindmonitor_bpf2bpf_dll.c  bindmonitor_bpf2bpf_raw.c  bindmonitor_bpf2bpf_sys.c  bindmonitor_dll.c  bindmonitor_mt_tailcall_dll.c  bindmonitor_mt_tailcall_raw.c  bindmonitor_mt_tailcall_sys.c  bindmonitor_perf_event_array_dll.c  bindmonitor_perf_event_array_raw.c  bindmonitor_perf_event_array_sys.c  bindmonitor_raw.c  bindmonitor_ringbuf_dll.c  bindmonitor_ringbuf_raw.c  bindmonitor_ringbuf_sys.c  bindmonitor_sys.c  bindmonitor_tailcall_dll.c  bindmonitor_tailcall_raw.c  bindmonitor_tailcall_sys.c  bpf_call_dll.c  bpf_call_raw.c  bpf_call_sys.c  bpf_dll.c  bpf_raw.c  bpf_sys.c  cgroup_count_connect4_dll.c  cgroup_count_connect4_raw.c  cgroup_count_connect4_sys.c  cgroup_count_connect6_dll.c  (+141 more)
tests/bpftool_tests/: bpftool_tests.vcxproj
tests/cilium/: cilium_tests.vcxproj
tests/client/: CMakeLists.txt
tests/end_to_end/: end_to_end.cpp  end_to_end_jit.h  helpers.h  netsh_test.cpp  netsh_test_helper.h  test_helper.cpp  test_helper.hpp
tests/export_program_info_test/: export_program_info_test.vcxproj
tests/fuzz/: fuzz.vcxproj
tests/libfuzzer/bpf2c_fuzzer/: bpf2c_fuzzer.vcxproj
tests/libfuzzer/core_helper_fuzzer/: core_helper_fuzzer.vcxproj
tests/libfuzzer/execution_context/: execution_context_fuzzer.vcxproj  libfuzz_harness.cpp
tests/libfuzzer/include/: fuzz_helper_function.hpp
tests/libfuzzer/netebpfext_fuzzer/: netebpfext_fuzzer.vcxproj
tests/libfuzzer/verifier_fuzzer/: libfuzz_harness.cpp  verifier_fuzzer.vcxproj
tests/libs/common/: CMakeLists.txt  common_tests.vcxproj
tests/libs/util/: CMakeLists.txt  test_util.vcxproj
tests/netebpfext_unit/: netebpfext_unit.cpp  netebpfext_unit.vcxproj
tests/performance/: CMakeLists.txt  ExecutionContext.cpp  performance.h  performance.vcxproj  performance_measure.h  platform.cpp
tests/sample/: cgroup_count_connect4.c  cgroup_count_connect6.c  cgroup_mt_connect4.c  cgroup_mt_connect6.c  sample.vcxproj
tests/sample/ext/app/: sample_ext_app.cpp  sample_ext_app.vcxproj
tests/sample/undocked/: global_vars.c  global_vars_and_map.c  map.c
tests/socket/: socket_tests.cpp  socket_tests.vcxproj  socket_tests_common.h
tests/stress/: ebpf_mt_stress.h  ebpf_stress_tests.cpp  readme.md
tests/stress/km/: ebpf_stress_tests_km.vcxproj  stress_tests_km.cpp
tests/stress/um/: ebpf_stress_tests_um.vcxproj  stress_tests_um.cpp
tests/unit/: CMakeLists.txt  libbpf_test.cpp  libbpf_test_jit.cpp  libbpf_test_jit.h  test.vcxproj
tests/xdp/: CMakeLists.txt  xdp_tests.vcxproj
tools/encode_program_info/: CMakeLists.txt  encode_program_info.vcxproj
(+50 files in other folders)
